Bump Gradle to JDK 21 compatible version