@@ -25,7 +25,7 @@ dependencies {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(20)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
@@ -33,15 +33,21 @@ tasks.withType(JavaCompile).configureEach {
     options.compilerArgs.add('--enable-preview')
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs += '--enable-preview'
+    jvmArgs += '--enable-native-access=ALL-UNNAMED'
+}
+
 compileTestGroovy {
     options.compilerArgs.add('--enable-preview')
+    options.compilerArgs.add('--enable-native-access=ALL-UNNAMED')
 }
 
 test {
     useJUnitPlatform()
     // TODO - support non-Linux lib names
     systemProperty "buoy.test.lib.path", new File(parent.projectDir.absoluteFile, "native/build/lib/main/debug/").toPath().toString()
-    jvmArgs(['--enable-preview'])
+    jvmArgs(['--enable-preview', '--enable-native-access=ALL-UNNAMED'])
 }
 
 publishing {
